parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    INCLUDE

Grammar

Rule 0     S' -> program
Rule 1     program -> function_declaration program
Rule 2     program -> main_function
Rule 3     main_function -> INT MAIN PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ function_body LLAVE_DER
Rule 4     function_declaration -> variable ID PARENTESIS_IZQ argument_list PARENTESIS_DER LLAVE_IZQ function_body LLAVE_DER
Rule 5     function_body -> statement_list
Rule 6     function_body -> vacio
Rule 7     statement_list -> statement
Rule 8     statement_list -> statement_list statement
Rule 9     statement -> assignment_statement
Rule 10    statement -> expression_statement
Rule 11    statement -> if
Rule 12    statement -> while
Rule 13    statement -> do_while
Rule 14    statement -> for
Rule 15    statement -> return
Rule 16    statement -> function_call PUNTO_Y_COMA
Rule 17    if -> IF PARENTESIS_IZQ expression PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
Rule 18    if -> IF PARENTESIS_IZQ expression PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER ELSE LLAVE_IZQ statement_list LLAVE_DER
Rule 19    while -> WHILE PARENTESIS_IZQ expression PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
Rule 20    do_while -> DO LLAVE_IZQ statement_list LLAVE_DER WHILE PARENTESIS_IZQ expression PARENTESIS_DER PUNTO_Y_COMA
Rule 21    for -> FOR PARENTESIS_IZQ variable ID ASIGNACION expression PUNTO_Y_COMA expression PUNTO_Y_COMA expression PARENTESIS_DER LLAVE_IZQ statement_list LLAVE_DER
Rule 22    return -> RETURN expression PUNTO_Y_COMA
Rule 23    function_call -> ID PARENTESIS_IZQ argument_list PARENTESIS_DER
Rule 24    argument_list -> expression
Rule 25    argument_list -> expression COMA argument_list
Rule 26    argument_list -> variable expression
Rule 27    argument_list -> variable expression COMA argument_list
Rule 28    assignment_statement -> variable ID ASIGNACION expression PUNTO_Y_COMA
Rule 29    assignment_statement -> variable ID CORCHETE_IZQ expression CORCHETE_DER ASIGNACION expression PUNTO_Y_COMA
Rule 30    assignment_statement -> ID ASIGNACION expression PUNTO_Y_COMA
Rule 31    variable -> INT
Rule 32    variable -> FLOAT
Rule 33    variable -> CHAR
Rule 34    variable -> DOUBLE
Rule 35    variable -> BOOLEAN
Rule 36    variable -> LONG
Rule 37    variable -> STRING
Rule 38    variable -> VOID
Rule 39    expression_statement -> expression PUNTO_Y_COMA
Rule 40    expression -> expression SUMA expression
Rule 41    expression -> expression RESTA expression
Rule 42    expression -> expression MULTIPLICACION expression
Rule 43    expression -> expression DIVISION expression
Rule 44    expression -> expression MENOR_IGUAL expression
Rule 45    expression -> expression MAYOR_IGUAL expression
Rule 46    expression -> expression IGUAL expression
Rule 47    expression -> expression DISTINTO expression
Rule 48    expression -> expression AND expression
Rule 49    expression -> expression OR expression
Rule 50    expression -> NOT expression
Rule 51    expression -> PARENTESIS_IZQ expression PARENTESIS_DER
Rule 52    expression -> LLAVE_IZQ expression LLAVE_DER
Rule 53    expression -> NUMERO
Rule 54    expression -> CADENA
Rule 55    expression -> expression PRINT expression
Rule 56    expression -> expression MENOR expression
Rule 57    expression -> expression MAYOR expression
Rule 58    expression -> ID
Rule 59    vacio -> <empty>

Terminals, with rules where they appear

AND                  : 48
ASIGNACION           : 21 28 29 30
BOOLEAN              : 35
CADENA               : 54
CHAR                 : 33
COMA                 : 25 27
COMMENT              : 
CORCHETE_DER         : 29
CORCHETE_IZQ         : 29
DISTINTO             : 47
DIVISION             : 43
DO                   : 20
DOUBLE               : 34
ELSE                 : 18
FLOAT                : 32
FOR                  : 21
ID                   : 4 21 23 28 29 30 58
IF                   : 17 18
IGUAL                : 46
INCLUDE              : 
INT                  : 3 31
LLAVE_DER            : 3 4 17 18 18 19 20 21 52
LLAVE_IZQ            : 3 4 17 18 18 19 20 21 52
LONG                 : 36
MAIN                 : 3
MAYOR                : 57
MAYOR_IGUAL          : 45
MENOR                : 56
MENOR_IGUAL          : 44
MULTIPLICACION       : 42
NOT                  : 50
NUMERO               : 53
OR                   : 49
PARENTESIS_DER       : 3 4 17 18 19 20 21 23 51
PARENTESIS_IZQ       : 3 4 17 18 19 20 21 23 51
PRINT                : 55
PUNTO_Y_COMA         : 16 20 21 21 22 28 29 30 39
RESTA                : 41
RETURN               : 22
STRING               : 37
SUMA                 : 40
VOID                 : 38
WHILE                : 19 20
error                : 

Nonterminals, with rules where they appear

argument_list        : 4 23 25 27
assignment_statement : 9
do_while             : 13
expression           : 17 18 19 20 21 21 21 22 24 25 26 27 28 29 29 30 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 51 52 55 55 56 56 57 57
expression_statement : 10
for                  : 14
function_body        : 3 4
function_call        : 16
function_declaration : 1
if                   : 11
main_function        : 2
program              : 1 0
return               : 15
statement            : 7 8
statement_list       : 5 8 17 18 18 19 20 21
vacio                : 6
variable             : 4 21 26 27 28 29
while                : 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function_declaration program
    (2) program -> . main_function
    (4) function_declaration -> . variable ID PARENTESIS_IZQ argument_list PARENTESIS_DER LLAVE_IZQ function_body LLAVE_DER
    (3) main_function -> . INT MAIN PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ function_body LLAVE_DER
    (31) variable -> . INT
    (32) variable -> . FLOAT
    (33) variable -> . CHAR
    (34) variable -> . DOUBLE
    (35) variable -> . BOOLEAN
    (36) variable -> . LONG
    (37) variable -> . STRING
    (38) variable -> . VOID

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    CHAR            shift and go to state 7
    DOUBLE          shift and go to state 8
    BOOLEAN         shift and go to state 9
    LONG            shift and go to state 10
    STRING          shift and go to state 11
    VOID            shift and go to state 12

    program                        shift and go to state 1
    function_declaration           shift and go to state 2
    main_function                  shift and go to state 3
    variable                       shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> function_declaration . program
    (1) program -> . function_declaration program
    (2) program -> . main_function
    (4) function_declaration -> . variable ID PARENTESIS_IZQ argument_list PARENTESIS_DER LLAVE_IZQ function_body LLAVE_DER
    (3) main_function -> . INT MAIN PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ function_body LLAVE_DER
    (31) variable -> . INT
    (32) variable -> . FLOAT
    (33) variable -> . CHAR
    (34) variable -> . DOUBLE
    (35) variable -> . BOOLEAN
    (36) variable -> . LONG
    (37) variable -> . STRING
    (38) variable -> . VOID

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    CHAR            shift and go to state 7
    DOUBLE          shift and go to state 8
    BOOLEAN         shift and go to state 9
    LONG            shift and go to state 10
    STRING          shift and go to state 11
    VOID            shift and go to state 12

    function_declaration           shift and go to state 2
    program                        shift and go to state 13
    main_function                  shift and go to state 3
    variable                       shift and go to state 4

state 3

    (2) program -> main_function .

    $end            reduce using rule 2 (program -> main_function .)


state 4

    (4) function_declaration -> variable . ID PARENTESIS_IZQ argument_list PARENTESIS_DER LLAVE_IZQ function_body LLAVE_DER

    ID              shift and go to state 14


state 5

    (3) main_function -> INT . MAIN PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ function_body LLAVE_DER
    (31) variable -> INT .

    MAIN            shift and go to state 15
    ID              reduce using rule 31 (variable -> INT .)


state 6

    (32) variable -> FLOAT .

    ID              reduce using rule 32 (variable -> FLOAT .)
    NOT             reduce using rule 32 (variable -> FLOAT .)
    PARENTESIS_IZQ  reduce using rule 32 (variable -> FLOAT .)
    LLAVE_IZQ       reduce using rule 32 (variable -> FLOAT .)
    NUMERO          reduce using rule 32 (variable -> FLOAT .)
    CADENA          reduce using rule 32 (variable -> FLOAT .)


state 7

    (33) variable -> CHAR .

    ID              reduce using rule 33 (variable -> CHAR .)
    NOT             reduce using rule 33 (variable -> CHAR .)
    PARENTESIS_IZQ  reduce using rule 33 (variable -> CHAR .)
    LLAVE_IZQ       reduce using rule 33 (variable -> CHAR .)
    NUMERO          reduce using rule 33 (variable -> CHAR .)
    CADENA          reduce using rule 33 (variable -> CHAR .)


state 8

    (34) variable -> DOUBLE .

    ID              reduce using rule 34 (variable -> DOUBLE .)
    NOT             reduce using rule 34 (variable -> DOUBLE .)
    PARENTESIS_IZQ  reduce using rule 34 (variable -> DOUBLE .)
    LLAVE_IZQ       reduce using rule 34 (variable -> DOUBLE .)
    NUMERO          reduce using rule 34 (variable -> DOUBLE .)
    CADENA          reduce using rule 34 (variable -> DOUBLE .)


state 9

    (35) variable -> BOOLEAN .

    ID              reduce using rule 35 (variable -> BOOLEAN .)
    NOT             reduce using rule 35 (variable -> BOOLEAN .)
    PARENTESIS_IZQ  reduce using rule 35 (variable -> BOOLEAN .)
    LLAVE_IZQ       reduce using rule 35 (variable -> BOOLEAN .)
    NUMERO          reduce using rule 35 (variable -> BOOLEAN .)
    CADENA          reduce using rule 35 (variable -> BOOLEAN .)


state 10

    (36) variable -> LONG .

    ID              reduce using rule 36 (variable -> LONG .)
    NOT             reduce using rule 36 (variable -> LONG .)
    PARENTESIS_IZQ  reduce using rule 36 (variable -> LONG .)
    LLAVE_IZQ       reduce using rule 36 (variable -> LONG .)
    NUMERO          reduce using rule 36 (variable -> LONG .)
    CADENA          reduce using rule 36 (variable -> LONG .)


state 11

    (37) variable -> STRING .

    ID              reduce using rule 37 (variable -> STRING .)
    NOT             reduce using rule 37 (variable -> STRING .)
    PARENTESIS_IZQ  reduce using rule 37 (variable -> STRING .)
    LLAVE_IZQ       reduce using rule 37 (variable -> STRING .)
    NUMERO          reduce using rule 37 (variable -> STRING .)
    CADENA          reduce using rule 37 (variable -> STRING .)


state 12

    (38) variable -> VOID .

    ID              reduce using rule 38 (variable -> VOID .)
    NOT             reduce using rule 38 (variable -> VOID .)
    PARENTESIS_IZQ  reduce using rule 38 (variable -> VOID .)
    LLAVE_IZQ       reduce using rule 38 (variable -> VOID .)
    NUMERO          reduce using rule 38 (variable -> VOID .)
    CADENA          reduce using rule 38 (variable -> VOID .)


state 13

    (1) program -> function_declaration program .

    $end            reduce using rule 1 (program -> function_declaration program .)


state 14

    (4) function_declaration -> variable ID . PARENTESIS_IZQ argument_list PARENTESIS_DER LLAVE_IZQ function_body LLAVE_DER

    PARENTESIS_IZQ  shift and go to state 16


state 15

    (3) main_function -> INT MAIN . PARENTESIS_IZQ PARENTESIS_DER LLAVE_IZQ function_body LLAVE_DER

    PARENTESIS_IZQ  shift and go to state 17


state 16

    (4) function_declaration -> variable ID PARENTESIS_IZQ . argument_list PARENTESIS_DER LLAVE_IZQ function_body LLAVE_DER
    (24) argument_list -> . expression
    (25) argument_list -> . expression COMA argument_list
    (26) argument_list -> . variable expression
    (27) argument_list -> . variable expression COMA argument_list
    (40) expression -> . expression SUMA expression
    (41) expression -> . expression RESTA expression
    (42) expression -> . expression MULTIPLICACION expression
    (43) expression -> . expression DIVISION expression
    (44) expression -> . expression MENOR_IGUAL expression
    (45) expression -> . expression MAYOR_IGUAL expression
    (46) expression -> . expression IGUAL expression
    (47) expression -> . expression DISTINTO expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . NOT expression
    (51) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (52) expression -> . LLAVE_IZQ expression LLAVE_DER
    (53) expression -> . NUMERO
    (54) expression -> . CADENA
    (55) expression -> . expression PRINT expression
    (56) expression -> . expression MENOR expression
    (57) expression -> . expression MAYOR expression
    (58) expression -> . ID
    (31) variable -> . INT
    (32) variable -> . FLOAT
    (33) variable -> . CHAR
    (34) variable -> . DOUBLE
    (35) variable -> . BOOLEAN
    (36) variable -> . LONG
    (37) variable -> . STRING
    (38) variable -> . VOID

    NOT             shift and go to state 24
    PARENTESIS_IZQ  shift and go to state 20
    LLAVE_IZQ       shift and go to state 22
    NUMERO          shift and go to state 25
    CADENA          shift and go to state 26
    ID              shift and go to state 19
    INT             shift and go to state 27
    FLOAT           shift and go to state 6
    CHAR            shift and go to state 7
    DOUBLE          shift and go to state 8
    BOOLEAN         shift and go to state 9
    LONG            shift and go to state 10
    STRING          shift and go to state 11
    VOID            shift and go to state 12

    variable                       shift and go to state 18
    argument_list                  shift and go to state 21
    expression                     shift and go to state 23

state 17

    (3) main_function -> INT MAIN PARENTESIS_IZQ . PARENTESIS_DER LLAVE_IZQ function_body LLAVE_DER

    PARENTESIS_DER  shift and go to state 28


state 18

    (26) argument_list -> variable . expression
    (27) argument_list -> variable . expression COMA argument_list
    (40) expression -> . expression SUMA expression
    (41) expression -> . expression RESTA expression
    (42) expression -> . expression MULTIPLICACION expression
    (43) expression -> . expression DIVISION expression
    (44) expression -> . expression MENOR_IGUAL expression
    (45) expression -> . expression MAYOR_IGUAL expression
    (46) expression -> . expression IGUAL expression
    (47) expression -> . expression DISTINTO expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . NOT expression
    (51) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (52) expression -> . LLAVE_IZQ expression LLAVE_DER
    (53) expression -> . NUMERO
    (54) expression -> . CADENA
    (55) expression -> . expression PRINT expression
    (56) expression -> . expression MENOR expression
    (57) expression -> . expression MAYOR expression
    (58) expression -> . ID

    NOT             shift and go to state 24
    PARENTESIS_IZQ  shift and go to state 20
    LLAVE_IZQ       shift and go to state 22
    NUMERO          shift and go to state 25
    CADENA          shift and go to state 26
    ID              shift and go to state 19

    expression                     shift and go to state 29

state 19

    (58) expression -> ID .

    COMA            reduce using rule 58 (expression -> ID .)
    SUMA            reduce using rule 58 (expression -> ID .)
    RESTA           reduce using rule 58 (expression -> ID .)
    MULTIPLICACION  reduce using rule 58 (expression -> ID .)
    DIVISION        reduce using rule 58 (expression -> ID .)
    MENOR_IGUAL     reduce using rule 58 (expression -> ID .)
    MAYOR_IGUAL     reduce using rule 58 (expression -> ID .)
    IGUAL           reduce using rule 58 (expression -> ID .)
    DISTINTO        reduce using rule 58 (expression -> ID .)
    AND             reduce using rule 58 (expression -> ID .)
    OR              reduce using rule 58 (expression -> ID .)
    PRINT           reduce using rule 58 (expression -> ID .)
    MENOR           reduce using rule 58 (expression -> ID .)
    MAYOR           reduce using rule 58 (expression -> ID .)
    PARENTESIS_DER  reduce using rule 58 (expression -> ID .)
    LLAVE_DER       reduce using rule 58 (expression -> ID .)
    PUNTO_Y_COMA    reduce using rule 58 (expression -> ID .)
    CORCHETE_DER    reduce using rule 58 (expression -> ID .)


state 20

    (51) expression -> PARENTESIS_IZQ . expression PARENTESIS_DER
    (40) expression -> . expression SUMA expression
    (41) expression -> . expression RESTA expression
    (42) expression -> . expression MULTIPLICACION expression
    (43) expression -> . expression DIVISION expression
    (44) expression -> . expression MENOR_IGUAL expression
    (45) expression -> . expression MAYOR_IGUAL expression
    (46) expression -> . expression IGUAL expression
    (47) expression -> . expression DISTINTO expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . NOT expression
    (51) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (52) expression -> . LLAVE_IZQ expression LLAVE_DER
    (53) expression -> . NUMERO
    (54) expression -> . CADENA
    (55) expression -> . expression PRINT expression
    (56) expression -> . expression MENOR expression
    (57) expression -> . expression MAYOR expression
    (58) expression -> . ID

    NOT             shift and go to state 24
    PARENTESIS_IZQ  shift and go to state 20
    LLAVE_IZQ       shift and go to state 22
    NUMERO          shift and go to state 25
    CADENA          shift and go to state 26
    ID              shift and go to state 19

    expression                     shift and go to state 30

state 21

    (4) function_declaration -> variable ID PARENTESIS_IZQ argument_list . PARENTESIS_DER LLAVE_IZQ function_body LLAVE_DER

    PARENTESIS_DER  shift and go to state 31


state 22

    (52) expression -> LLAVE_IZQ . expression LLAVE_DER
    (40) expression -> . expression SUMA expression
    (41) expression -> . expression RESTA expression
    (42) expression -> . expression MULTIPLICACION expression
    (43) expression -> . expression DIVISION expression
    (44) expression -> . expression MENOR_IGUAL expression
    (45) expression -> . expression MAYOR_IGUAL expression
    (46) expression -> . expression IGUAL expression
    (47) expression -> . expression DISTINTO expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . NOT expression
    (51) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (52) expression -> . LLAVE_IZQ expression LLAVE_DER
    (53) expression -> . NUMERO
    (54) expression -> . CADENA
    (55) expression -> . expression PRINT expression
    (56) expression -> . expression MENOR expression
    (57) expression -> . expression MAYOR expression
    (58) expression -> . ID

    NOT             shift and go to state 24
    PARENTESIS_IZQ  shift and go to state 20
    LLAVE_IZQ       shift and go to state 22
    NUMERO          shift and go to state 25
    CADENA          shift and go to state 26
    ID              shift and go to state 19

    expression                     shift and go to state 32

state 23

    (24) argument_list -> expression .
    (25) argument_list -> expression . COMA argument_list
    (40) expression -> expression . SUMA expression
    (41) expression -> expression . RESTA expression
    (42) expression -> expression . MULTIPLICACION expression
    (43) expression -> expression . DIVISION expression
    (44) expression -> expression . MENOR_IGUAL expression
    (45) expression -> expression . MAYOR_IGUAL expression
    (46) expression -> expression . IGUAL expression
    (47) expression -> expression . DISTINTO expression
    (48) expression -> expression . AND expression
    (49) expression -> expression . OR expression
    (55) expression -> expression . PRINT expression
    (56) expression -> expression . MENOR expression
    (57) expression -> expression . MAYOR expression

    PARENTESIS_DER  reduce using rule 24 (argument_list -> expression .)
    COMA            shift and go to state 33
    SUMA            shift and go to state 34
    RESTA           shift and go to state 35
    MULTIPLICACION  shift and go to state 36
    DIVISION        shift and go to state 37
    MENOR_IGUAL     shift and go to state 38
    MAYOR_IGUAL     shift and go to state 39
    IGUAL           shift and go to state 40
    DISTINTO        shift and go to state 41
    AND             shift and go to state 42
    OR              shift and go to state 43
    PRINT           shift and go to state 44
    MENOR           shift and go to state 45
    MAYOR           shift and go to state 46


state 24

    (50) expression -> NOT . expression
    (40) expression -> . expression SUMA expression
    (41) expression -> . expression RESTA expression
    (42) expression -> . expression MULTIPLICACION expression
    (43) expression -> . expression DIVISION expression
    (44) expression -> . expression MENOR_IGUAL expression
    (45) expression -> . expression MAYOR_IGUAL expression
    (46) expression -> . expression IGUAL expression
    (47) expression -> . expression DISTINTO expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . NOT expression
    (51) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (52) expression -> . LLAVE_IZQ expression LLAVE_DER
    (53) expression -> . NUMERO
    (54) expression -> . CADENA
    (55) expression -> . expression PRINT expression
    (56) expression -> . expression MENOR expression
    (57) expression -> . expression MAYOR expression
    (58) expression -> . ID

    NOT             shift and go to state 24
    PARENTESIS_IZQ  shift and go to state 20
    LLAVE_IZQ       shift and go to state 22
    NUMERO          shift and go to state 25
    CADENA          shift and go to state 26
    ID              shift and go to state 19

    expression                     shift and go to state 47

state 25

    (53) expression -> NUMERO .

    COMA            reduce using rule 53 (expression -> NUMERO .)
    SUMA            reduce using rule 53 (expression -> NUMERO .)
    RESTA           reduce using rule 53 (expression -> NUMERO .)
    MULTIPLICACION  reduce using rule 53 (expression -> NUMERO .)
    DIVISION        reduce using rule 53 (expression -> NUMERO .)
    MENOR_IGUAL     reduce using rule 53 (expression -> NUMERO .)
    MAYOR_IGUAL     reduce using rule 53 (expression -> NUMERO .)
    IGUAL           reduce using rule 53 (expression -> NUMERO .)
    DISTINTO        reduce using rule 53 (expression -> NUMERO .)
    AND             reduce using rule 53 (expression -> NUMERO .)
    OR              reduce using rule 53 (expression -> NUMERO .)
    PRINT           reduce using rule 53 (expression -> NUMERO .)
    MENOR           reduce using rule 53 (expression -> NUMERO .)
    MAYOR           reduce using rule 53 (expression -> NUMERO .)
    PARENTESIS_DER  reduce using rule 53 (expression -> NUMERO .)
    LLAVE_DER       reduce using rule 53 (expression -> NUMERO .)
    PUNTO_Y_COMA    reduce using rule 53 (expression -> NUMERO .)
    CORCHETE_DER    reduce using rule 53 (expression -> NUMERO .)


state 26

    (54) expression -> CADENA .

    COMA            reduce using rule 54 (expression -> CADENA .)
    SUMA            reduce using rule 54 (expression -> CADENA .)
    RESTA           reduce using rule 54 (expression -> CADENA .)
    MULTIPLICACION  reduce using rule 54 (expression -> CADENA .)
    DIVISION        reduce using rule 54 (expression -> CADENA .)
    MENOR_IGUAL     reduce using rule 54 (expression -> CADENA .)
    MAYOR_IGUAL     reduce using rule 54 (expression -> CADENA .)
    IGUAL           reduce using rule 54 (expression -> CADENA .)
    DISTINTO        reduce using rule 54 (expression -> CADENA .)
    AND             reduce using rule 54 (expression -> CADENA .)
    OR              reduce using rule 54 (expression -> CADENA .)
    PRINT           reduce using rule 54 (expression -> CADENA .)
    MENOR           reduce using rule 54 (expression -> CADENA .)
    MAYOR           reduce using rule 54 (expression -> CADENA .)
    PARENTESIS_DER  reduce using rule 54 (expression -> CADENA .)
    LLAVE_DER       reduce using rule 54 (expression -> CADENA .)
    PUNTO_Y_COMA    reduce using rule 54 (expression -> CADENA .)
    CORCHETE_DER    reduce using rule 54 (expression -> CADENA .)


state 27

    (31) variable -> INT .

    NOT             reduce using rule 31 (variable -> INT .)
    PARENTESIS_IZQ  reduce using rule 31 (variable -> INT .)
    LLAVE_IZQ       reduce using rule 31 (variable -> INT .)
    NUMERO          reduce using rule 31 (variable -> INT .)
    CADENA          reduce using rule 31 (variable -> INT .)
    ID              reduce using rule 31 (variable -> INT .)


state 28

    (3) main_function -> INT MAIN PARENTESIS_IZQ PARENTESIS_DER . LLAVE_IZQ function_body LLAVE_DER

    LLAVE_IZQ       shift and go to state 48


state 29

    (26) argument_list -> variable expression .
    (27) argument_list -> variable expression . COMA argument_list
    (40) expression -> expression . SUMA expression
    (41) expression -> expression . RESTA expression
    (42) expression -> expression . MULTIPLICACION expression
    (43) expression -> expression . DIVISION expression
    (44) expression -> expression . MENOR_IGUAL expression
    (45) expression -> expression . MAYOR_IGUAL expression
    (46) expression -> expression . IGUAL expression
    (47) expression -> expression . DISTINTO expression
    (48) expression -> expression . AND expression
    (49) expression -> expression . OR expression
    (55) expression -> expression . PRINT expression
    (56) expression -> expression . MENOR expression
    (57) expression -> expression . MAYOR expression

    PARENTESIS_DER  reduce using rule 26 (argument_list -> variable expression .)
    COMA            shift and go to state 49
    SUMA            shift and go to state 34
    RESTA           shift and go to state 35
    MULTIPLICACION  shift and go to state 36
    DIVISION        shift and go to state 37
    MENOR_IGUAL     shift and go to state 38
    MAYOR_IGUAL     shift and go to state 39
    IGUAL           shift and go to state 40
    DISTINTO        shift and go to state 41
    AND             shift and go to state 42
    OR              shift and go to state 43
    PRINT           shift and go to state 44
    MENOR           shift and go to state 45
    MAYOR           shift and go to state 46


state 30
